@@ -11,7 +11,7 @@
 
     <groupId>com.aliyun.openservices</groupId>
     <artifactId>aliyun-log</artifactId>
-    <version>0.6.105</version>
+    <version>0.6.123</version>
     <packaging>jar</packaging>
 
     <name>Aliyun LOG Java SDK</name>
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.10</version>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -102,8 +102,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
@@ -147,16 +147,38 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                    <parallel>methods</parallel>
-                    <threadCount>4</threadCount>
-                    <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m
-                        -Dfile.encoding=UTF-8
-                    </argLine>
+                    <parallel>classes</parallel>
+                    <threadCount>128</threadCount>
+                    <forkCount>2C</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx2048m -Dfile.encoding=UTF-8</argLine>
                     <excludes>
                         <exclude>**/odps/**</exclude>
                         <exclude>**/oms/**</exclude>
+                        <exclude>com.aliyun.openservices.log.functiontest.CnameFunctionTest.java</exclude>
+                        <exclude>com.aliyun.openservices.log.functiontest.LogstoreReplicationTest.java</exclude>
+                        <exclude>com.aliyun.openservices.log.functiontest.AuditJobFunctionTest.java</exclude>
+                        <exclude>com.aliyun.openservices.log.functiontest.ResourceGroupFunctionTest.java</exclude>
+                        <exclude>com.aliyun.openservices.log.functiontest.ExportOdpsTest.java</exclude>
+                        <exclude>com.aliyun.openservices.log.functiontest.ExportOSSTest.java</exclude>
+                        <exclude>com.aliyun.openservices.log.functiontest.LogstoreTest.java</exclude>
+                        <exclude>com.aliyun.openservices.log.functiontest.RebuildIndexFunctionTest.java</exclude>
+                        <exclude>com.aliyun.openservices.log.functiontest.RandomDataTest.java</exclude>
+                        <exclude>com.aliyun.openservices.log.functiontest.SlsClientUnitTest.java</exclude>
+                        <exclude>com.aliyun.openservices.log.functiontest.java</exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.9.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.1.0</version>
             </plugin>
 
             <plugin>
@@ -190,7 +212,6 @@
                 <configuration>
                     <artifactSet>
                         <excludes>
-                            <exclude>com.alibaba:fastjson:jar:</exclude>
                             <exclude>net.jpountz.lz4:lz4:jar:</exclude>
                         </excludes>
                     </artifactSet>
@@ -199,6 +220,10 @@
                             <pattern>com.google.protobuf</pattern>
                             <shadedPattern>com.aliyun.log.thirdparty.com.google.protobuf
                             </shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>com.alibaba.fastjson</pattern>
+                            <shadedPattern>com.aliyun.log.thirdparty.com.alibaba:fastjson</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>org.apache.http</pattern>
@@ -245,4 +270,16 @@
             </plugin>
         </plugins>
     </build>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+        </plugins>
+  </reporting>
 </project>
